...
		self.buttonSecondColorConfigurationSource = buttonSecondColorConfigurationSource
		self.backgroundColorConfigurationSource = backgroundColorConfigurationSource
		super.init(frame: frame)
		configureStackView()
		createSubviews()
		constraintsInit()
		accessibilityIdentifier = "theThirdView"
	}

	required init?(coder: NSCoder) {
		fatalError("init(coder:) has not been implemented")
	}

...

	private(set) lazy var starFourthButton: UIButton = {
		var button = UIButton()
		button.translatesAutoresizingMaskIntoConstraints = false
		button.setImage(UIImage(named: "iconlyLightStar")!, for: .normal)
		button.setImage(UIImage(named: "iconlyBoldStar")!, for: .selected)
		button.accessibilityIdentifier = "fourthStars"
		return button
	}()

	private(set) lazy var starFiveButton: UIButton = {
		var button = UIButton()
		button.translatesAutoresizingMaskIntoConstraints = false
...
