...
		self.buttonFirstColorConfigurationSource = buttonFirstColorConfigurationSource
		self.buttonSecondColorConfigurationSource = buttonSecondColorConfigurationSource
		self.backgroundColorConfigurationSource = backgroundColorConfigurationSource
		super.init(frame: frame)
		createSubviews()
		constraintsInit()
		accessibilityIdentifier = "secondCongratulationView"
	}

	required init?(coder: NSCoder) {
		fatalError("init(coder:) has not been implemented")
	}

...
